# google-ads-mcp-server

./: .env.example  .gitignore  README.md  ads_auth.py  analysis_config.py  charts.py  config.example.json  creative_bank.py  daily_analysis.py  generate_refresh_token.py  google-ads.yaml.example  notify.py  pyproject.toml  report_html.py  run_daily_analysis.sh  streamlit_app.py  translate.py
.streamlit/: secrets.toml.example
src/google_ads_mcp/: __init__.py  audit.py  client.py  config.py  errors.py  safety.py  schemas.py  server.py  util.py
src/google_ads_mcp/tools/: _helpers.py  reads.py  writes_app.py  writes_common.py  writes_search.py
tests/: test_guardrails.py  test_reads_smoke.py  test_writes_app.py  test_writes_search.py
