[project]
name = "google-ads-mcp"
version = "0.1.0"
description = "MCP server for managing Google Ads Search and App/UAC campaigns (reads + guarded writes)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    # google-ads-python release that ships Google Ads API v23 support.
    "google-ads>=27.0.0",
    # Official MCP Python SDK.
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "streamlit>=1.59.2",
]

[project.scripts]
google-ads-mcp = "google_ads_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ads_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
